src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__class_self_and_super-9.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
cannot access `super` in a class with no parent class
| v = [4;31msuper[0m


