src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__class_stmt-4.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| class T: [4;31ma[0m = b


