src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__class_stmt-7.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31m:[0m pass


