src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__ctrl_stmt-3.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
yield outside of function
| [4;31myield[0m v


