src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__duplicate_fields-2.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
duplicate field a
| fn [4;31ma[0m(): pass


